# lmx

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: lmx.yml  publish.yml
hf-space/: README.md
src/lmx/: __init__.py  __main__.py  classifier.py  cli.py  formatter.py  preferences.py  pricing.py  recommender.py
src/lmx/providers/: __init__.py  anthropic_provider.py  base.py  cerebras_provider.py  groq_provider.py  openai_provider.py  together_provider.py
tests/: test_classifier.py  test_recommender.py
validation_posts/: r_LocalLLaMA.md  r_machinelearning.md  r_python.md  r_selfhosted.md
